width correction on mobile display

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -645,6 +645,8 @@ button:hover {
     .about-text {
       margin-left: 0px;
         font-size: 18px;
+        margin: 0 auto;
+        width: 90%;
     }
 
     h2 {
@@ -663,6 +665,8 @@ button:hover {
 
     .cat-description {
       font-size: 16px;
+      margin: 0 auto;
+      width: 90%;
     }
 
 }
